Fixed feed spacing

--- a/packages/commonwealth/client/styles/pages/user_dashboard/user_dashboard_row.scss
+++ b/packages/commonwealth/client/styles/pages/user_dashboard/user_dashboard_row.scss
@@ -46,6 +46,7 @@
   max-width: 0;
   color: unset !important;
   text-decoration: none;
+  padding-left: 0;
 
   a {
     color: unset !important;
